--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,5 @@
 * {
     box-sizing: border-box;
-    padding: 0;
     margin: 0;
 }
 
@@ -20,7 +19,7 @@ body {
     font-size: 48px;
 }
 
-.header h1 .seo {
+.seo {
     color: #d9dcd6;
 }
 
